[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warp_beacon"
dynamic = ["version"]
authors = [
  { name="Andrey (Sb0y) Bagrintsev", email="andrey@bagrintsev.me" },
]
description = "Telegram bot for expanding external media links"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"ffmpeg-python",
	"uvloop",
	"tgcrypto",
	"pyrogram",
	"pillow-heif",
	"pytubefix",
	"av == 12.3.0",
	"urlextract",
	"pillow",
	"pymongo",
	"instagrapi == 2.0.0",
	"bs4",
	"yt_dlp",
	"pydub",
	"SpeechRecognition",
	"playwright",
	"fake-useragent",
	"pyotp"
]
keywords = ["bot", "telegram", "instagram", "export"]
classifiers = [
	'Development Status :: 5 - Production/Stable',

	'Topic :: Sociology',
	'Topic :: Communications :: File Sharing',
	'Topic :: Internet :: WWW/HTTP',
	'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
	'Topic :: Scientific/Engineering :: Image Processing',
	'Topic :: Multimedia :: Video',
	'Topic :: Multimedia',

	'License :: OSI Approved :: Apache Software License',

	# Specify operating system
	'Operating System :: POSIX :: Linux',

	# Specify the Python versions you support here. In particular, ensure
	'Programming Language :: Python :: 3.10'
]

[project.entry-points."warp_beacon"]
warp_beacon = "warp_beacon.warp_beacon:main"

[project.scripts]
warp_beacon = "warp_beacon.warp_beacon:main"

[project.urls]
Homepage = "https://github.com/sb0y/warp_beacon"
Issues = "https://github.com/sb0y/warp_beacon/issues"
